添加石大简介页面

--- a/UPC_Guide_Demo/app.json
+++ b/UPC_Guide_Demo/app.json
@@ -1,6 +1,7 @@
 {
   "pages": [  
-    "pages/start/start"
+    "pages/start/start",
+    "pages/introduce/introduce"
   ],
   "window": {
     "backgroundTextStyle": "light",
