Demo Ver 1.0.0 整理上传完毕

--- a/UPC_Guide_Demo/app.json
+++ b/UPC_Guide_Demo/app.json
@@ -1,7 +1,15 @@
 {
   "pages": [  
+  
     "pages/start/start",
-    "pages/introduce/introduce"
+    "pages/introduce/introduce",
+    "pages/navigation/navigation",
+    "pages/navMap/navMap",
+    "pages/search/search",
+    "pages/profile/profile",
+    "pages/allview/allview",
+    "pages/help/help"
+    
   ],
   "window": {
     "backgroundTextStyle": "light",
